ajustes calendario aluno

--- a/interface/css/style.css
+++ b/interface/css/style.css
@@ -3484,3 +3484,14 @@ ul.chat-available-user li a:hover {
 #copyrights a {
   color: #fff;
 }
+
+.horadisponivel{
+    background-color: #009da7
+}
+
+
+
+
+.horaindisponivel{
+    background-color: #777777
+}
