--- a/interface/css/to-do.css
+++ b/interface/css/to-do.css
@@ -81,11 +81,30 @@
 .tasks-widget .task-list  li.task-done:hover {
   background:#f4f4f4;
 }
-
+ 
 .tasks-widget .task-list  li:hover  {
-  background:#f9f9f9;
+  /* background:#f9f9f9; */
 }
 
+.tasks-widget .task-list  li.horadisponivel:hover {
+   background:#02595f; 
+}
+
+.tasks-widget .task-list  li.aulamarcada:hover {
+	background:#7a0212; 
+}
+
+.tasks-widget .task-list  li.aulamarcada {
+	background:#d60420; 
+}
+
+.tasks-widget .task-list  li.experimental:hover {
+	background:#2d0155; 
+}
+
+.tasks-widget .task-list  li.experimental {
+	background:#8002f5; 
+}
 .tasks-widget .task-list  li .task-config {
   display:none;
 }
